# dll_wapper

./: .gitignore  CLAUDE.md  CMakeLists.txt  GFL_Control.slx  TypeDefines.mat  adpss_wrapper.c  adpss_wrapper.def  generate_adpss_wrapper.py  testadpssmodel.slx
.claude/: settings.local.json
.github/workflows/: build.yml
testadpssmodel260402_ert_shrlib_rtw/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.c  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  setup_mingw.bat  testadpssmodel260402_comp.rsp  testadpssmodel260402_data.c  testadpssmodel260402_private.h  testadpssmodel260402_types.h
testadpssmodel260402_ert_shrlib_rtw/tmwinternal/: simulink_cache.xml  tr
